Fix input stream close

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'software.amazon.awssdk:url-connection-client:2.20.85'
     implementation 'software.amazon.awssdk:lambda:2.20.85'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
     testImplementation 'junit:junit:4.13.2'
 }
 
